fixing Errors cleaning up somme files - template

--- a/store/templates/index.html
+++ b/store/templates/index.html
@@ -109,7 +109,9 @@
 								<!-- Deals Item -->
 								<div class="owl-item deals_item">
 									<div class="deals_image">
-										<img src='{% static "/images/deals.png" %}' alt="">
+										<a href="./products/1/" >
+											<img src='{% static "/images/deals.png" %}' alt="">
+										</a>
 									</div>
 									<div class="deals_content">
 										<div class="deals_info_line d-flex flex-row justify-content-start">
