--- a/store/templates/header.html
+++ b/store/templates/header.html
@@ -24,8 +24,8 @@
 
 	<!-- shop css files -->
 	<link rel="stylesheet" type="text/css" href='{% static "/plugins/jquery-ui-1.12.1.custom/jquery-ui.css" %}'>
-	<link rel="stylesheet" type="text/css" href='{% static "/styles/shop_styles.css" %}'>
-	<link rel="stylesheet" type="text/css" href='{% static "/styles/shop_responsive.css" %}'>
+	<!--<link rel="stylesheet" type="text/css" href='{% static "/styles/shop_styles.css" %}'>
+	<link rel="stylesheet" type="text/css" href='{% static "/styles/shop_responsive.css" %}'>-->
 
 </head>
 
