fixing Errors2 shop file cleaning up somme files - template

--- a/store/templates/shop.html
+++ b/store/templates/shop.html
@@ -1,6 +1,8 @@
 {% load staticfiles %}
 
 {% include "header.html" %}
+	<link rel="stylesheet" type="text/css" href='{% static "/styles/shop_styles.css" %}'>
+	<link rel="stylesheet" type="text/css" href='{% static "/styles/shop_responsive.css" %}'>
 	
 	<!-- Home -->
 
