--- a/store/static/styles/main_styles.css
+++ b/store/static/styles/main_styles.css
@@ -278,10 +278,11 @@ section
 .top_bar
 {
 	width: 100%;
-	height: 56px;
-	background: #fafafa;
+	height: 40px;
+	background: #f2f2f2;
 	border-bottom: solid 1px rgba(0,0,0,0.05);
 	z-index: 2;
+	vertical-align: middle;
 }
 .header.scrolled .top_bar
 {
@@ -906,8 +907,8 @@ select option
 	position: absolute;
 	top: 100%;
 	left: 0;
-	/*visibility: hidden;
-	opacity: 0;*/
+	visibility: hidden;
+	opacity: 0;
 	min-width: 100%;
 	background: #FFFFFF;
 	box-shadow: 0px 10px 25px rgba(0,0,0,0.1);
@@ -1044,7 +1045,6 @@ select option
 
 .page_menu
 {
-	margin-top: 15px;
 	-webkit-transition: all 500ms ease;
     -moz-transition: all 500ms ease;
     -ms-transition: all 500ms ease;
@@ -1074,6 +1074,10 @@ select option
 	border: none;
 	outline: none;
 	padding-left: 25px;
+}
+.page_menu_nav
+{
+	padding-top: 15px;
 }
 .page_menu_item
 {
@@ -1317,6 +1321,7 @@ select option
 .deals_featured
 {
 	width: 100%;
+	height: 10%;
 }
 
 /*********************************
