--- a/store/templates/footer.html
+++ b/store/templates/footer.html
@@ -10,7 +10,7 @@
 						<div class="newsletter_title_container">
 							<div class="newsletter_icon"><img src="images/send.png" alt=""></div>
 							<div class="newsletter_title">Sign up for Newsletter</div>
-							<div class="newsletter_text"><p>...and receive %20 coupon for first shopping.</p></div>
+							<div class="newsletter_text"><p>and receive %20 coupon for first shopping.</p></div>
 						</div>
 						<div class="newsletter_content clearfix">
 							<form action="#" class="newsletter_form">
@@ -58,29 +58,16 @@
 						<div class="footer_title">Find it Fast</div>
 						<ul class="footer_list">
 							<li><a href="#">Computers & Laptops</a></li>
-							<li><a href="#">Cameras & Photos</a></li>
-							<li><a href="#">Hardware</a></li>
 							<li><a href="#">Smartphones & Tablets</a></li>
+							<li><a href="#">Video Games</a></li>
 							<li><a href="#">TV & Audio</a></li>
-						</ul>
-						<div class="footer_subtitle">Gadgets</div>
-						<ul class="footer_list">
+						
 							<li><a href="#">Car Electronics</a></li>
 						</ul>
 					</div>
 				</div>
 
-				<div class="col-lg-2">
-					<div class="footer_column">
-						<ul class="footer_list footer_list_2">
-							<li><a href="#">Video Games & Consoles</a></li>
-							<li><a href="#">Accessories</a></li>
-							<li><a href="#">Cameras & Photos</a></li>
-							<li><a href="#">Hardware</a></li>
-							<li><a href="#">Computers & Laptops</a></li>
-						</ul>
-					</div>
-				</div>
+				
 
 				<div class="col-lg-2">
 					<div class="footer_column">
