--- a/store/templates/header.html
+++ b/store/templates/header.html
@@ -1,31 +1,5 @@
+
 {% load staticfiles %}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-	<title>Electro</title>
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="description" content="Elctro shop project">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-
-	<link rel="stylesheet" type="text/css" href='{% static "/styles/bootstrap4/bootstrap.min.css" %}'>
-	<link href='{% static "/plugins/fontawesome-free-5.0.1/css/fontawesome-all.css" %}' rel="stylesheet" type="text/css">
-	
-	<link rel="stylesheet" type="text/css" href='{% static "/plugins/OwlCarousel2-2.2.1/owl.carousel.css" %}'>
-	<link rel="stylesheet" type="text/css" href='{% static "/plugins/OwlCarousel2-2.2.1/owl.theme.default.css" %}'>
-	<link rel="stylesheet" type="text/css" href='{% static "/plugins/OwlCarousel2-2.2.1/animate.css" %}'>
-	<link rel="stylesheet" type="text/css" href='{% static "/plugins/slick-1.8.0/slick.css" %}'>
-	<link rel="stylesheet" type="text/css" href='{% static "/styles/main_styles.css" %}'>
-    <link rel="stylesheet" type="text/css" href='{% static "/styles/responsive.css" %}'>
-    
-    <!-- product css -->
-    <link rel="stylesheet" type="text/css" href='{% static "/styles/product_styles.css" %}'>
-    <link rel="stylesheet" type="text/css" href='{% static "/styles/product_responsive.css" %}'>
-
-	<!-- shop css files -->
-	<link rel="stylesheet" type="text/css" href='{% static "/plugins/jquery-ui-1.12.1.custom/jquery-ui.css" %}'>
-	<!--<link rel="stylesheet" type="text/css" href='{% static "/styles/shop_styles.css" %}'>
-	<link rel="stylesheet" type="text/css" href='{% static "/styles/shop_responsive.css" %}'>-->
 
 </head>
 
@@ -54,6 +28,7 @@
 							</div>
 							<a href="mailto:electro@gmail.com">electro@gmail.com</a></div>
 						<div class="top_bar_content ml-auto">
+						<!-- 
 							<div class="top_bar_menu">
 								<ul class="standard_dropdown top_bar_dropdown">
 									<li>
@@ -71,11 +46,12 @@
 										</ul>
 									</li>
 								</ul>
-							</div>
+							</div> 
+						-->
 							<div class="top_bar_user">
 								<div class="user_icon"><img src='{% static "/images/user.svg" %}' alt=""></div>
-								<div><a href="#">Register</a></div>
-								<div><a href="#">Sign in</a></div>
+								<div><a href="/register">Register</a></div>
+								<div><a href="/sign_in">Sign in</a></div>
 							</div>
 						</div>
 					</div>
@@ -93,7 +69,7 @@
 					<div class="col-lg-2 col-sm-3 col-3 order-1">
 						<div class="logo_container">
 							<div class="logo">
-								<a href="/">Electro?</a>
+								<a href="/">Electro</a>
 							</div>
 						</div>
 					</div>
@@ -111,11 +87,11 @@
 												<i class="fas fa-chevron-down"></i>
 												<ul class="custom_list clc">
 													<li><a class="clc" href="#">All Categories</a></li>
-													<li><a class="clc" href="#">Computers</a></li>
-													<li><a class="clc" href="#">Laptops</a></li>
-													<li><a class="clc" href="#">Cameras</a></li>
-													<li><a class="clc" href="#">Hardware</a></li>
-													<li><a class="clc" href="#">Smartphones</a></li>
+													<li><a class="clc" href="#">Computers & Laptops</a></li>
+													<li><a class="clc" href="#">Smartphones & Tablets</a></li>
+													<li><a class="clc" href="#">TV & Audio </a></li>
+													<li><a class="clc" href="#">Video Games</a></li>
+													<li><a class="clc" href="#">Car Electronics</a></li>
 												</ul>
 											</div>
 										</div>
@@ -149,7 +125,7 @@
 										<div class="cart_count"><span>10</span></div>
 									</div>
 									<div class="cart_content">
-										<div class="cart_text"><a href="#">Cart</a></div>
+										<div class="cart_text"><a href="/cart">Cart</a></div>
 										<div class="cart_price">$85</div>
 									</div>
 								</div>
@@ -178,9 +154,8 @@
 	
 									<ul class="cat_menu">
 										<li><a href="#">Computers & Laptops <i class="fas fa-chevron-right ml-auto"></i></a></li>
-										<li><a href="#">Cameras & Photos<i class="fas fa-chevron-right"></i></a></li>
 										<li class="hassubs">
-											<a href="#">Hardware<i class="fas fa-chevron-right"></i></a>
+											<a href="#">Smartphones & Tablets<i class="fas fa-chevron-right"></i></a>
 											<ul>
 												<li class="hassubs">
 													<a href="#">Menu Item<i class="fas fa-chevron-right"></i></a>
@@ -196,12 +171,9 @@
 												<li><a href="#">Menu Item<i class="fas fa-chevron-right"></i></a></li>
 											</ul>
 										</li>
-										<li><a href="#">Smartphones & Tablets<i class="fas fa-chevron-right"></i></a></li>
+										<li><a href="#">Video Games<i class="fas fa-chevron-right"></i></a></li>
 										<li><a href="#">TV & Audio<i class="fas fa-chevron-right"></i></a></li>
-										<li><a href="#">Gadgets<i class="fas fa-chevron-right"></i></a></li>
 										<li><a href="#">Car Electronics<i class="fas fa-chevron-right"></i></a></li>
-										<li><a href="#">Video Games & Consoles<i class="fas fa-chevron-right"></i></a></li>
-										<li><a href="#">Accessories<i class="fas fa-chevron-right"></i></a></li>
 									</ul>
 								</div>
 	
@@ -209,7 +181,7 @@
 	
 								<div class="main_nav_menu ml-auto">
 									<ul class="standard_dropdown main_nav_dropdown">
-										<li><a href="#">Home<i class="fas fa-chevron-down"></i></a></li>
+										<li><a href="/">Home<i class="fas fa-chevron-down"></i></a></li>
 										<li class="hassubs">
 											<a href="#">Super Deals<i class="fas fa-chevron-down"></i></a>
 											<ul>
@@ -255,6 +227,8 @@
 										</li>
 										<li><a href="/blog">Blog<i class="fas fa-chevron-down"></i></a></li>
 										<li><a href="/contact">Contact<i class="fas fa-chevron-down"></i></a></li>
+										<li><a href="/about">About Us<i class="fas fa-chevron-down"></i></a></li>
+
 									</ul>
 								</div>
 	
@@ -290,7 +264,7 @@
 									</form>
 								</div>
 								<ul class="page_menu_nav">
-									<li class="page_menu_item has-children">
+						<!-- 		<li class="page_menu_item has-children">
 										<a href="#">Language<i class="fa fa-angle-down"></i></a>
 										<ul class="page_menu_selection">
 											<li><a href="#">English<i class="fa fa-angle-down"></i></a></li>
@@ -308,8 +282,9 @@
 											<li><a href="#">JPY Japanese Yen<i class="fa fa-angle-down"></i></a></li>
 										</ul>
 									</li>
+							-->
 									<li class="page_menu_item">
-										<a href="#">Home<i class="fa fa-angle-down"></i></a>
+										<a href="/">Home<i class="fa fa-angle-down"></i></a>
 									</li>
 									<li class="page_menu_item has-children">
 										<a href="#">Super Deals<i class="fa fa-angle-down"></i></a>
