--- a/store/templates/shop.html
+++ b/store/templates/shop.html
@@ -1,8 +1,36 @@
+
 {% load staticfiles %}
 
-{% include "header.html" %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<title>Electro</title>
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="description" content="Elctro shop project">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+
+	<link rel="stylesheet" type="text/css" href='{% static "/styles/bootstrap4/bootstrap.min.css" %}'>
+	<link href='{% static "/plugins/fontawesome-free-5.0.1/css/fontawesome-all.css" %}' rel="stylesheet" type="text/css">
+	
+	<link rel="stylesheet" type="text/css" href='{% static "/plugins/OwlCarousel2-2.2.1/owl.carousel.css" %}'>
+	<link rel="stylesheet" type="text/css" href='{% static "/plugins/OwlCarousel2-2.2.1/owl.theme.default.css" %}'>
+	<link rel="stylesheet" type="text/css" href='{% static "/plugins/OwlCarousel2-2.2.1/animate.css" %}'>
+	<link rel="stylesheet" type="text/css" href='{% static "/plugins/slick-1.8.0/slick.css" %}'>
+	<link rel="stylesheet" type="text/css" href='{% static "/styles/main_styles.css" %}'>
+    <link rel="stylesheet" type="text/css" href='{% static "/styles/responsive.css" %}'>
+    <link rel="stylesheet" type="text/css" href='{% static "/plugins/jquery-ui-1.12.1.custom/jquery-ui.css" %}'>
+
+
+
+
+
+
 	<link rel="stylesheet" type="text/css" href='{% static "/styles/shop_styles.css" %}'>
 	<link rel="stylesheet" type="text/css" href='{% static "/styles/shop_responsive.css" %}'>
+
+	
+{% include "header.html" %}
 	
 	<!-- Home -->
 
@@ -28,14 +56,10 @@
 							<div class="sidebar_title">Categories</div>
 							<ul class="sidebar_categories">
 								<li><a href="#">Computers & Laptops</a></li>
-								<li><a href="#">Cameras & Photos</a></li>
-								<li><a href="#">Hardware</a></li>
 								<li><a href="#">Smartphones & Tablets</a></li>
+								<li><a href="#">Video Games </a></li>
 								<li><a href="#">TV & Audio</a></li>
-								<li><a href="#">Gadgets</a></li>
 								<li><a href="#">Car Electronics</a></li>
-								<li><a href="#">Video Games & Consoles</a></li>
-								<li><a href="#">Accessories</a></li>
 							</ul>
 						</div>
 						<div class="sidebar_section filter_by_section">
