changes - cleaning up the main page

--- a/store/templates/footer.html
+++ b/store/templates/footer.html
@@ -8,7 +8,9 @@
 				<div class="col">
 					<div class="newsletter_container d-flex flex-lg-row flex-column align-items-lg-center align-items-center justify-content-lg-start justify-content-center">
 						<div class="newsletter_title_container">
-							<div class="newsletter_icon"><img src="images/send.png" alt=""></div>
+							<div class="newsletter_icon">
+								<img src='{% static "/images/send.png" %}' alt="">
+							</div>
 							<div class="newsletter_title">Sign up for Newsletter</div>
 							<div class="newsletter_text"><p>and receive %20 coupon for first shopping.</p></div>
 						</div>
@@ -44,10 +46,18 @@
 						</div>
 						<div class="footer_social">
 							<ul>
-								<li><a href="https://facebook.com" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
-								<li><a href="https://twitter.com" target="_blank"><i class="fab fa-twitter"></i></a></li>
-								<li><a href="https://youtube.com" target="_blank"><i class="fab fa-youtube"></i></a></li>
-								<li><a href="https://google.com" target="_blank"><i class="fab fa-google"></i></a></li>
+								<li><a href="https://facebook.com" target="_blank">
+									<i class="fab fa-facebook-f"></i></a>
+								</li>
+								<li><a href="https://twitter.com" target="_blank">
+									<i class="fab fa-twitter"></i></a>
+								</li>
+								<li><a href="https://youtube.com" target="_blank">
+									<i class="fab fa-youtube"></i></a>
+								</li>
+								<li><a href="https://google.com" target="_blank">
+									<i class="fab fa-google"></i></a>
+								</li>
 							</ul>
 						</div>
 					</div>
@@ -127,14 +137,14 @@
 <script src='{% static "/plugins/slick-1.8.0/slick.js" %}'></script>
 <script src='{% static "/plugins/easing/easing.js" %}'></script>
 <script src='{% static "/js/custom.js" %}'></script>
-<!-- product custmer js file -->
+<!-- product custmer js file 
 <script src='{% static "/js/product_custom.js" %}'></script>
 
-<!-- shop custmer js file -->
+< shop custmer js file 
 <script src='{% static "/plugins/Isotope/isotope.pkgd.min.js" %}'></script>
 <script src='{% static "/plugins/jquery-ui-1.12.1.custom/jquery-ui.js" %}'></script>
 <script src='{% static "/plugins/parallax-js-master/parallax.min.js" %}'></script>
-<script src='{% static "/js/shop_custom.js" %}'></script>
+<script src='{% static "/js/shop_custom.js" %}'></script>-->
 
 </body>
 
