--- a/store/templates/contact.html
+++ b/store/templates/contact.html
@@ -1,33 +1,10 @@
 {% load staticfiles %}
 
-
-<!DOCTYPE html>
-<html lang="en">
-<head>
-	<title>Electro</title>
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="description" content="Elctro shop project">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-
-	<link rel="stylesheet" type="text/css" href='{% static "/styles/bootstrap4/bootstrap.min.css" %}'>
-	<link href='{% static "/plugins/fontawesome-free-5.0.1/css/fontawesome-all.css" %}' rel="stylesheet" type="text/css">
-	
-	<link rel="stylesheet" type="text/css" href='{% static "/plugins/OwlCarousel2-2.2.1/owl.carousel.css" %}'>
-	<link rel="stylesheet" type="text/css" href='{% static "/plugins/OwlCarousel2-2.2.1/owl.theme.default.css" %}'>
-	<link rel="stylesheet" type="text/css" href='{% static "/plugins/OwlCarousel2-2.2.1/animate.css" %}'>
-	<link rel="stylesheet" type="text/css" href='{% static "/plugins/slick-1.8.0/slick.css" %}'>
-	<link rel="stylesheet" type="text/css" href='{% static "/styles/main_styles.css" %}'>
-    <link rel="stylesheet" type="text/css" href='{% static "/styles/responsive.css" %}'>
-    <link rel="stylesheet" type="text/css" href='{% static "/plugins/jquery-ui-1.12.1.custom/jquery-ui.css" %}'>
-
-
-
-
+{% include "header.html" %}
 
 	<link rel="stylesheet" type="text/css" href='{% static "/styles/contact_styles.css" %}'>
 	<link rel="stylesheet" type="text/css" href='{% static "/styles/contact_responsive.css" %}'>
-{% include "header.html" %}
+
 	
 
 	<div class="contact_info">
@@ -38,7 +15,9 @@
 
 						<!-- Contact Item -->
 						<div class="contact_info_item d-flex flex-row align-items-center justify-content-start">
-							<div class="contact_info_image"><img src="images/contact_1.png" alt=""></div>
+							<div class="contact_info_image">
+								<img src='{% static "/images/contact_1.png" %}' alt="">
+							</div>
 							<div class="contact_info_content">
 								<div class="contact_info_title">Phone</div>
 								<div class="contact_info_text">+38 068 005 3570</div>
@@ -47,7 +26,9 @@
 
 						<!-- Contact Item -->
 						<div class="contact_info_item d-flex flex-row align-items-center justify-content-start">
-							<div class="contact_info_image"><img src="images/contact_2.png" alt=""></div>
+							<div class="contact_info_image">
+								<img src='{% static "/images/contact_2.png" %}' alt="">
+							</div>
 							<div class="contact_info_content">
 								<div class="contact_info_title">Email</div>
 								<div class="contact_info_text">fastsales@gmail.com</div>
@@ -56,7 +37,9 @@
 
 						<!-- Contact Item -->
 						<div class="contact_info_item d-flex flex-row align-items-center justify-content-start">
-							<div class="contact_info_image"><img src="images/contact_3.png" alt=""></div>
+							<div class="contact_info_image">
+								<img src='{% static "/images/contact_3.png" %}' alt="">
+							</div>
 							<div class="contact_info_content">
 								<div class="contact_info_title">Address</div>
 								<div class="contact_info_text">10 Suffolk at Soho, London, UK</div>
