--- a/store/templates/products/product.html
+++ b/store/templates/products/product.html
@@ -1,36 +1,11 @@
 {% load staticfiles %}
 
-
-<!DOCTYPE html>
-<html lang="en">
-<head>
-	<title>Electro</title>
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="description" content="Elctro shop project">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-
-	<link rel="stylesheet" type="text/css" href='{% static "/styles/bootstrap4/bootstrap.min.css" %}'>
-	<link href='{% static "/plugins/fontawesome-free-5.0.1/css/fontawesome-all.css" %}' rel="stylesheet" type="text/css">
-	
-	<link rel="stylesheet" type="text/css" href='{% static "/plugins/OwlCarousel2-2.2.1/owl.carousel.css" %}'>
-	<link rel="stylesheet" type="text/css" href='{% static "/plugins/OwlCarousel2-2.2.1/owl.theme.default.css" %}'>
-	<link rel="stylesheet" type="text/css" href='{% static "/plugins/OwlCarousel2-2.2.1/animate.css" %}'>
-	<link rel="stylesheet" type="text/css" href='{% static "/plugins/slick-1.8.0/slick.css" %}'>
-	<link rel="stylesheet" type="text/css" href='{% static "/styles/main_styles.css" %}'>
-    <link rel="stylesheet" type="text/css" href='{% static "/styles/responsive.css" %}'>
-    <link rel="stylesheet" type="text/css" href='{% static "/plugins/jquery-ui-1.12.1.custom/jquery-ui.css" %}'>
-
-
-
-
-
+{% include "header.html" %}
 	 
 	<link rel="stylesheet" type="text/css" href='{% static "/styles/product_responsive.css" %}'>
    	<link rel="stylesheet" type="text/css" href='{% static "/styles/product_styles.css" %}'>
-{% include "header.html" %}
 
-<!-- Single Product -->
+	<!-- Single Product -->
 	<div class="single_product">
 		<div class="container">
 			<div class="row">
@@ -257,3 +232,5 @@
 
 <!-- Footer -->
 {% include "footer.html" %}
+
+<script src='{% static "/js/product_custom.js" %}'></script>
