--- a/store/templates/index.html
+++ b/store/templates/index.html
@@ -126,7 +126,7 @@
 											<div class="border_active"></div>
 											<div class="product_item discount d-flex flex-column align-items-center justify-content-center text-center">
 												<div class="product_image d-flex flex-column align-items-center justify-content-center">
-													<a href="./products/1/">
+													<a href="./products/{{ product.id }}/">
 														<img src='{% static "/images/featured_1.png" %}' alt="">
 													</a>
 												</div>
@@ -150,7 +150,7 @@
 												</div>
 												<div class="product_fav"><i class="fas fa-heart"></i></div>
 												<ul class="product_marks">
-													<li class="product_mark product_discount">-25%</li>
+													<li class="product_mark product_discount">-{{product.pourcentage}}%</li>
 													<li class="product_mark product_new">new</li>
 												</ul>
 											</div>
@@ -190,7 +190,7 @@
 												</div>
 												<div class="product_fav"><i class="fas fa-heart"></i></div>
 												<ul class="product_marks">
-													<li class="product_mark product_discount">-25%</li>
+													<li class="product_mark product_discount">-{{newp.pourcentage}}%</li>
 													<li class="product_mark product_new">new</li>
 												</ul>
 											</div>
@@ -205,15 +205,22 @@
 
 							<div class="product_panel panel">
 								<div class="featured_slider slider">
-
+									{% for order in orders_product_list %}
 									<!-- Slider Item -->
 									<div class="featured_slider_item">
 										<div class="border_active"></div>
 										<div class="product_item discount d-flex flex-column align-items-center justify-content-center text-center">
-											<div class="product_image d-flex flex-column align-items-center justify-content-center"><img src="images/featured_1.png" alt=""></div>
+											<div class="product_image d-flex flex-column align-items-center justify-content-center">
+												<a href="./product/{{order.id}}">
+													<img src='{% static "/images/featured_1.png" %}' alt="">
+												</a>
+											</div>
 											<div class="product_content">
-												<div class="product_price discount">$225<span>$300</span></div>
-												<div class="product_name"><div><a href="product.html">Huawei MediaPad...</a></div></div>
+												<div class="product_price discount">${{order.prix}}<span>${{order.prix_old}}</span></div>
+												<div class="product_name">
+													<div>
+														<a href="./product/{{order.id}}">{{order.product_name}}</a>
+													</div></div>
 												<div class="product_extras">
 													<div class="product_color">
 														<input type="radio" checked name="product_color" style="background:#b19c83">
@@ -225,11 +232,12 @@
 											</div>
 											<div class="product_fav"><i class="fas fa-heart"></i></div>
 											<ul class="product_marks">
-												<li class="product_mark product_discount">-25%</li>
+												<li class="product_mark product_discount">-{{order.pourcentage}}%</li>
 												<li class="product_mark product_new">new</li>
 											</ul>
 										</div>
 									</div>
+									{% endfor %}
 								</div>
 								<div class="featured_slider_dots_cover"></div>
 							</div>
