--- a/store/templates/index.html
+++ b/store/templates/index.html
@@ -3,8 +3,122 @@
 	{% include "header.html" %}
 	
 	<!-- Banner -->
+	<div class="banner_2">
+		<div class="banner_2_background" style="background-image: url('{% static "/images/banner_background.jpg" %}')"></div>
+		<div class="banner_2_container">
+			<div class="banner_2_dots"></div>
+			<!-- Banner 2 Slider -->
+			<div class="owl-carousel owl-theme banner_2_slider">
+				<!-- Banner 2 Slider Item -->
+				<div class="owl-item">
+					<div class="banner_2_item">
+						<div class="container fill_height">
+							<div class="row fill_height">
+								<div class="col-lg-4 col-md-6 fill_height">
+									<div class="banner_2_content">
+										<div class="banner_2_category">Laptops</div>
+										<div class="banner_2_title">MacBook Air 13</div>
+										<div class="banner_2_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas fermentum laoreet.</div>
+										<div>
+											<span class="fa fa-star" style="color: orange;"></span>
+											<span class="fa fa-star" style="color: orange;"></span>
+											<span class="fa fa-star" style="color: orange;"></span>
+											<span class="fa fa-star" style="color: orange;"></span>
+											<span class="fa fa-star"></span>
+										</div>
+										<div class="button banner_2_button"><a href="#">Explore</a></div>
+									</div>
+										
+								</div>
+								<div class="col-lg-8 col-md-6 fill_height">
+									<div class="banner_2_image_container">
+										<div class="banner_2_image">
+											<img src='{% static "/images/banner_2_product.png" %}' alt="">
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>			
+					</div>
+				</div>
+	
+				<!-- Banner 2 Slider Item -->
+				<div class="owl-item">
+					<div class="banner_2_item">
+						<div class="container fill_height">
+							<div class="row fill_height">
+								<div class="col-lg-4 col-md-6 fill_height">
+									<div class="banner_2_content">
+										<div class="banner_2_category">Laptops</div>
+										<div class="banner_2_title">MacBook Air 13</div>
+										<div class="banner_2_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas fermentum laoreet.</div>
+										<div>
+											<span class="fa fa-star" style="color: orange;"></span>
+											<span class="fa fa-star" style="color: orange;"></span>
+											<span class="fa fa-star" style="color: orange;"></span>
+											<span class="fa fa-star" style="color: orange;"></span>
+											<span class="fa fa-star"></span>
+										</div>
+										<div class="button banner_2_button">
+											<a href="#">Explore</a>
+										</div>
+									</div>
+										
+								</div>
+								<div class="col-lg-8 col-md-6 fill_height">
+									<div class="banner_2_image_container">
+										<div class="banner_2_image">
+											<img src='{% static "/images/banner_2_product.png" %}' alt="">
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>			
+					</div>
+				</div>
+	
+				<!-- Banner 2 Slider Item -->
+				<div class="owl-item">
+					<div class="banner_2_item">
+						<div class="container fill_height">
+							<div class="row fill_height">
+								<div class="col-lg-4 col-md-6 fill_height">
+									<div class="banner_2_content">
+										<div class="banner_2_category">Laptops</div>
+										<div class="banner_2_title">MacBook Air 13</div>
+										<div class="banner_2_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas fermentum laoreet.</div>
+											
+										<div>
+											<span class="fa fa-star" style="color: orange;"></span>
+											<span class="fa fa-star" style="color: orange;"></span>
+											<span class="fa fa-star" style="color: orange;"></span>
+											<span class="fa fa-star" style="color: orange;"></span>
+											<span class="fa fa-star"></span>
+										</div>
+										<div class="button banner_2_button">
+											<a href="#">Explore</a>
+										</div>
+									</div>
+										
+								</div>
+								<div class="col-lg-8 col-md-6 fill_height">
+									<div class="banner_2_image_container">
+										<div class="banner_2_image">
+											<img src='{% static "/images/banner_2_product.png" %}' alt="">
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>			
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	
+	
 
-	<div class="banner">
+	<!--<div class="banner">
 		<div class="banner_background" style="background-image: url('{% static "/images/banner_background.jpg" %}')"></div>
 		<div class="container fill_height">
 			<div class="row fill_height">
@@ -21,7 +135,7 @@
 				</div>
 			</div>
 		</div>
-	</div>
+	</div>-->
 
 
 	<!-- Deals of the week -->
@@ -32,7 +146,6 @@
 				<div class="col d-flex flex-lg-row flex-column align-items-center justify-content-start">
 					
 					<!-- Deals -->
-
 					<div class="deals">
 						<div class="deals_title">Deals of the Week</div>
 						<div class="deals_slider_container">
@@ -41,7 +154,7 @@
 							<div class="owl-carousel owl-theme deals_slider">
 								
 								<!-- Deals Item -->
-								<div class="owl-item deals_item">
+								<div class="owl-item deals_item active">
 									<div class="deals_image">
 										<a href="./products/1/" >
 											<img src='{% static "/images/deals.png" %}' alt="">
