commit changes to the main page and some others

--- a/store/templates/footer.html
+++ b/store/templates/footer.html
@@ -67,17 +67,12 @@
 					<div class="footer_column">
 						<div class="footer_title">Find it Fast</div>
 						<ul class="footer_list">
-							<li><a href="#">Computers & Laptops</a></li>
-							<li><a href="#">Smartphones & Tablets</a></li>
-							<li><a href="#">Video Games</a></li>
-							<li><a href="#">TV & Audio</a></li>
-						
-							<li><a href="#">Car Electronics</a></li>
+							{% for cat in categories %}
+								<li><a href="/categorie/{{cat.id}}">{{cat.designation}}</a></li>
+							{% endfor %}
 						</ul>
 					</div>
 				</div>
-
-				
 
 				<div class="col-lg-2">
 					<div class="footer_column">
