--- a/store/templates/products/product.html
+++ b/store/templates/products/product.html
@@ -1,3 +1,4 @@
+
 {% load staticfiles %}
 
 {% include "header.html" %}
@@ -39,7 +40,11 @@
 						<div class="product_category">Laptops</div>
 						<div class="product_name">MacBook Air 13</div>
 						<div class="rating_r rating_r_4 product_rating">
-							<i></i><i></i><i></i><i></i><i></i>
+							<span class="fa fa-star" style="color: orange;"></span>
+							<span class="fa fa-star" style="color: orange;"></span>
+							<span class="fa fa-star" style="color: orange;"></span>
+							<span class="fa fa-star" style="color: orange;"></span>
+							<span class="fa fa-star"></span>
 						</div>
 						<div class="product_text">
 							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas fermentum.
