--- a/store/templates/login.html
+++ b/store/templates/login.html
@@ -1,4 +1,5 @@
 
+
 {% load staticfiles %}
 <!DOCTYPE html>
 <html lang="en">
@@ -36,6 +37,23 @@
 		<div class="home_background parallax-window" data-parallax="scroll" data-image-src="images/blog_single_background.jpg" data-speed="0.8"></div>
 	</div>
 
+<h1>User Login</h1>
+
+{% if form.has_errors %}
+<p>Your username and password didn't match. Please try again.</p>
+{% endif %}
+
+<form method="post" action=".">
+	
+	<p><label for="id_username">Username:</label> {{ form.username }}</p>
+
+	<p><label for="id_password">Password:</label> {{ form.password }}</p>
+
+	<input type="hidden" name="next" value="/" />
+	<input type="submit" value="login" />
+
+	{% csrf_token %}
+</form>
 
 <!-- Footer -->
 	{% include "footer.html" %}
