--- a/store/templates/footer.html
+++ b/store/templates/footer.html
@@ -11,15 +11,15 @@
 							<div class="newsletter_icon">
 								<img src='{% static "/images/send.png" %}' alt="">
 							</div>
-							<div class="newsletter_title">Sign up for Newsletter</div>
-							<div class="newsletter_text"><p>and receive %20 coupon for first shopping.</p></div>
+							<div class="newsletter_title">S'inscrire aux Newsletters</div>
+							<div class="newsletter_text"><p>et recevez un coupon de 20% pour vos premiers achats.</p></div>
 						</div>
 						<div class="newsletter_content clearfix">
 							<form action="#" class="newsletter_form">
 								<input type="email" class="newsletter_input" required="required" placeholder="Enter your email address">
-								<button class="newsletter_button">Subscribe</button>
+								<button class="newsletter_button">Souscrire</button>
 							</form>
-							<div class="newsletter_unsubscribe_link"><a href="#">unsubscribe</a></div>
+							<div class="newsletter_unsubscribe_link"><a href="#">Se désabonner							</a></div>
 						</div>
 					</div>
 				</div>
